--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="status-bar">
       <div class="status-bar_column">
         <span>No service</span>
+        <i class="fa-solid fa-wifi"></i>
       </div>
       <!-- To do : Wifi Icon -->
 
@@ -20,9 +21,15 @@
 
       <div class="status-bar_column">
         <span>11%</span>
+        <i class="fa-solid fa-battery-full"></i>
+        <i class="fa-solid fa-bolt"></i>
       </div>
       <!-- Battery Icon -->
       <!-- Lightning Icon -->
     </div>
+    <script
+      src="https://kit.fontawesome.com/2abe623f18.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
