--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
       <!-- Battery Icon -->
       <!-- Lightning Icon -->
     </div>
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">If you have a Kokoa Clone, log in</p>
+    </header>
+
+    <form>
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="password" />
+      <input type="submit" value="Log In" /> value
+    </form>
+
+    <a href="#">find Kokoa</a>
+
     <script
       src="https://kit.fontawesome.com/2abe623f18.js"
       crossorigin="anonymous"
